--- a/package.json
+++ b/package.json
@@ -59,17 +59,17 @@
     "codelyzer": "5.0.1",
     "conventional-changelog-cli": "2.0.11",
     "core-js": "2.6.1",
-    "electron": "^1.8.8",
+    "electron": "^4.2.5",
     "electron-builder": "20.41.0",
     "electron-reload": "1.4.0",
     "jasmine-core": "3.3.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "3.1.1",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.4",
     "karma-jasmine": "2.0.1",
     "karma-jasmine-html-reporter": "1.4.0",
-    "mocha": "6.1.2",
+    "mocha": "^6.1.4",
     "npm-run-all": "4.1.5",
     "rxjs": "6.5.2",
     "spectron": "5.0.0",
